feat: endpoint viaturas & boleias
